--- a/Cyberduck/Cyberduck/Cyberduck.csproj
+++ b/Cyberduck/Cyberduck/Cyberduck.csproj
@@ -14,6 +14,12 @@
 	<UseWinUI>true</UseWinUI>
     <EnableMsixTooling>true</EnableMsixTooling>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="Views\BookmarksPage\Components\CommandBar.xaml" />
+    <None Remove="Views\DatatransferPage\Components\CommandBar.xaml" />
+    <None Remove="Views\HistoryPage\Components\CommandBar.xaml" />
+    <None Remove="Views\HistoryPage\Components\HistoryItem.xaml" />
+  </ItemGroup>
 
   <ItemGroup>
     <Manifest Include="$(ApplicationManifest)" />
@@ -35,6 +41,18 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="Views\BookmarksPage\Components\CommandBar.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Views\DatatransferPage\Components\CommandBar.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Views\HistoryPage\Components\CommandBar.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Views\HistoryPage\Components\HistoryItem.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
@@ -42,10 +60,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\Dialogs\" />
-    <Folder Include="Views\BookmarksPage\" />
-    <Folder Include="Views\DatatransferPage\" />
-    <Folder Include="Views\HistoryPage\" />
+    <Folder Include="Views\BonjourPage\Components\" />
+    <Folder Include="Views\Dialogs\Components\" />
     <Folder Include="Views\SettingsPage\" />
   </ItemGroup>
   
