Added TypeToIcon converter

--- a/Cyberduck/Cyberduck/Cyberduck.csproj
+++ b/Cyberduck/Cyberduck/Cyberduck.csproj
@@ -19,6 +19,7 @@
     <None Remove="Views\DatatransferPage\Components\Datatransfer.xaml" />
     <None Remove="Views\DatatransferPage\Components\DatatransferCommandBar.xaml" />
     <None Remove="Views\DatatransferPage\Components\DatatransferGroup.xaml" />
+    <None Remove="Views\DatatransferPage\Components\DatatransferGroupItem.xaml" />
     <None Remove="Views\HistoryPage\Components\HistoryCommandBar.xaml" />
     <None Remove="Views\HistoryPage\Components\HistoryItem.xaml" />
     <None Remove="Views\HistoryPage\Components\HistoryItemTag.xaml" />
@@ -44,6 +45,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="Views\DatatransferPage\Components\DatatransferGroupItem.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="Views\DatatransferPage\Components\DatatransferGroup.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
