Started with ManualConnectionDialog

--- a/Cyberduck/Cyberduck/Cyberduck.csproj
+++ b/Cyberduck/Cyberduck/Cyberduck.csproj
@@ -23,6 +23,7 @@
     <None Remove="Views\DatatransferPage\Components\DatatransferCommandBar.xaml" />
     <None Remove="Views\DatatransferPage\Components\DatatransferGroup.xaml" />
     <None Remove="Views\DatatransferPage\Components\DatatransferGroupItem.xaml" />
+    <None Remove="Views\Dialogs\ManualConnectionDialogContent.xaml" />
     <None Remove="Views\HistoryPage\Components\HistoryCommandBar.xaml" />
     <None Remove="Views\HistoryPage\Components\HistoryItem.xaml" />
     <None Remove="Views\HistoryPage\Components\HistoryItemTag.xaml" />
@@ -48,6 +49,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="Views\Dialogs\ManualConnectionDialogContent.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="Views\BookmarksPage\Components\BookmarkGroupItem.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
